# movie-barcodes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  barcode_generation.py  color_extraction.py  main.py  pyproject.toml  requirements.txt  requirements_lint.txt  setup.cfg  setup.py  utility.py  video_processing.py
.github/workflows/: ci.yaml
src/: barcode_generation.py  color_extraction.py  main.py  utility.py  video_processing.py
src/movie_barcodes/: __init__.py  barcode_generation.py  cli.py  color_extraction.py  utility.py  video_processing.py
tests/: conftest.py  test_barcode_generation.py  test_color_extraction.py  test_integration.py  test_utility.py  test_video_processing.py
