[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-barcodes"
description = "Compress every frame of a movie in a single color barcode. Transform entire movies into stunning single-barcode visualizations. Capture the essence of cinematic storytelling through dominant color extraction from each frame."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Clément Delteil", email = "clement45.delteil45@gmail.com" }
]
keywords = [
  "visualization", "python", "opencv", "color extraction", "data science",
  "machine learning", "movies", "computer vision", "multiprocessing",
  "parallel computing", "barcode", "image processing", "multithreading",
  "data visualization", "video processing", "color barcode"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "colorama==0.4.6",
  "joblib==1.3.2",
  "numpy==1.26.0",
  "opencv-python==4.8.1.78",
  "Pillow==10.3.0",
  "scikit-learn==1.5.0",
  "scipy==1.11.2",
  "threadpoolctl==3.2.0",
  "tqdm==4.66.3",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Wazzabeee/movie-barcodes"
Repository = "https://github.com/Wazzabeee/movie-barcodes"

[project.scripts]
movie-barcodes = "src.main:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

 [tool.ruff]
 line-length = 120
 # Match repo's default Python for linting/formatting
 target-version = "py312"
 exclude = [
   "env/",
 ]

[tool.ruff.lint]
# Keep compatibility with Black-style slicing
extend-ignore = ["E203"]
